style.css
:root {
    background: rgb(46, 45, 45);
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: 'Kdam Thmor Pro', sans-serif;
}


@font-face {
    font-family: 'Kdam Thmor Pro', sans-serif;
    src: url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    background: #1f1f1f;
    margin-top: 30px;
    border-radius: 10px;
    box-shadow: 0px 0px 5px 0px black;
    max-width: 100%;
    height: auto;
    padding: 10px;
}

.register {
    background-color: #292929;
    padding: 10px;
    height: inherit;
}

input {
    width: 100%;
    border-radius: 5px;
    height: 40px;
}

#dova {
    border-radius: 5px;
}

.txtbox1 {
    font-size: medium;
    background-color: #7f5745;
    padding: 20px;
    margin-top: 10px;
    margin-bottom: 50px;
}

.form-item {
    color: #7f5745;
}

.choices {
    display: block;
    background-color: #7f5745;
    justify-content: center;
    align-items: center;
    margin-bottom: 30px;
    margin-top: 30px;
    padding-bottom: 10px;
}

.selection {
    display: block;
    margin-top: 10px;
    margin-bottom: 10px;
    padding-top: 10px;
    text-align: center;
    background-color: #7f5745;
}

.path {
    color: black;
    font-size: large;
    border-radius: 5px;
    border-color: aliceblue;
    padding: 10px;
    margin-left: 26px;
    width: fit-content;

}

.btn-submit {
    background: #7f5745;
    color: black;
    padding: 10px;
    width: 100%;
    font-size: medium;
    font-weight: bold;
}

.btn-submit:active {
    background: rgb(255, 255, 255);
    color: rgb(0, 0, 0);
}

